fix word-wrap

--- a/app/assets/stylesheets/forums.css.scss
+++ b/app/assets/stylesheets/forums.css.scss
@@ -51,4 +51,8 @@
       }
     }
   }
+
+  dd {
+    word-wrap: break-word;
+  }
 }
